--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,9 +1,10 @@
-MONGODB_URI = XXXXXXXXXXXXXXXXXXXXXXXX
+MONGODB_URI = mongodb+srv://em84830:1332@nuevo.kp5t4tn.mongodb.net/?retryWrites=true&w=majority
 
-HOST_GMAIL = XXXXXXXXXXXXXXXXXXXXXXXX
-PORT_GMAIL = XXXXXXXXXXXXXXXXXXXXXXXX
-USER_GMAIL = XXXXXXXXXXXXXXXXXXXXXXXX
-PASS_GMAIL = XXXXXXXXXXXXXXXXXXXXXXXX
+HOST_GMAIL = smtp.gmail.com
+PORT_GMAIL = 465
+USER_GMAIL = byrontosh08@gmail.com
+PASS_GMAIL = vpmsgkzqffuqcwcg
 
+JWT_SECRET = SDFGSJDF7246782CFBKJSDF
 
-JWT_SECRET = XXXXXXXXXXXXXXXXXXXXXXXX
+VITE_BACKEND_URL=http://localhost:3000/api
